          crashes when you kill your input method (xterm et al. also crash).
        - fix bugs in X flushing, causing an empty screen after startup.
        - fix various memleaks in rxvtd.
        - fix a bug that kept escape codes to be generated for some
          keysyms that also have string translations, when not --enable-xim.
          reported by joel reed.
        - countless minor bugfixes.
        - re-enabled esc-seq. for font-switching (\033 ] 50 ; <fontset> \007).
        - fix bug in locale-handling that kept the correct locale from
          being selected.
        - implemented esc-seq. to switch locales (\033 ] 9 ; <locale> \007).
        - removed greek support.
        - allow NUL bytes (ctrl-@) to be entered even with XIM enabled.

1.8  Mon Feb  2 20:09:18 CET 2004
	- almost total conversion to C++. Except for introducing
          new bugs, this should not change much.
        - fix and re-enable background pixmap and inherit pixmap support.
        - re-enabled multiple scrollbar support.
        - added plain scrollbar style and restored xterm scrollbar.
        - blinking and selections work slightly better now.
        - fix an error condition when rxvt receives more than one screenful
          of output. should occur with original rxvt, too, but very rarely.
          (I guess the code contains more surprises of this sort...)

1.7  Fri Jan 30 16:50:11 CET 2004
	- further cleanups.
        - never do last-minute-changes: restore ability to have
          color + bold ass high-intensity, and let the selection
          use reverse video, not _blink_.
        - remove OPTION_HC, at least temporarily. If you want it back,
          please drop me a note.

1.6  Fri Jan 30 00:34:01 CET 2004
	- cleanups, minor bugfixes.
        - blinking text.
        - normal text color + bold gets white text instead of
          normal text when colorBD is not set.
        (- support double-byte characters (by blocking).)
          was not implemented
